--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.13",
     "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "next": "^16.1.1",
     "postcss": "^8.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
